Inference and Training

--- a/challenge-1/notebooks/inference.ipynb
+++ b/challenge-1/notebooks/inference.ipynb
@@ -1,38 +1,97 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "743b7220",
+   "metadata": {},
+   "source": [
+    "# Inference Script with TTA\n",
+    "\n",
+    "This notebook contains the inference code with Test-Time Augmentation."
+   ]
   },
-  "cells": [
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "nG2h-3cWah1W"
-      },
-      "outputs": [],
-      "source": [
-        "\"\"\"\n",
-        "\n",
-        "Author: Annam.ai IIT Ropar\n",
-        "Team Name: SoilClassifiers\n",
-        "Team Members: Member-1, Member-2, Member-3, Member-4, Member-5\n",
-        "Leaderboard Rank: <Your Rank>\n",
-        "\n",
-        "\"\"\"\n",
-        "\n",
-        "# This is the notebook used for making the inferences using the model trained."
-      ]
-    }
-  ]
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac114dc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torchvision import transforms, models\n",
+    "from PIL import Image\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "# Device configuration\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"Using device: {device}\")\n",
+    "\n",
+    "IMG_SIZE = 384\n",
+    "\n",
+    "# Soil classes\n",
+    "CLASSES = ['Alluvial soil', 'Black Soil', 'Clay soil', 'Red soil']\n",
+    "\n",
+    "# Base transform\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize((IMG_SIZE, IMG_SIZE)),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], \n",
+    "                         std=[0.229, 0.224, 0.225])\n",
+    "])\n",
+    "\n",
+    "# TTA transforms\n",
+    "tta_transforms = [\n",
+    "    transform,\n",
+    "    transforms.Compose([\n",
+    "        transforms.Resize((IMG_SIZE, IMG_SIZE)),\n",
+    "        transforms.RandomHorizontalFlip(p=1.0),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize(mean=[0.485, 0.456, 0.406], \n",
+    "                             std=[0.229, 0.224, 0.225])\n",
+    "    ]),\n",
+    "    transforms.Compose([\n",
+    "        transforms.Resize((IMG_SIZE, IMG_SIZE)),\n",
+    "        transforms.ColorJitter(brightness=0.2, contrast=0.2),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize(mean=[0.485, 0.456, 0.406], \n",
+    "                             std=[0.229, 0.224, 0.225])\n",
+    "    ]),\n",
+    "]\n",
+    "\n",
+    "# Load model\n",
+    "model = models.efficientnet_v2_s(weights=None)\n",
+    "model.classifier[1] = torch.nn.Linear(1280, len(CLASSES))\n",
+    "model.load_state_dict(torch.load('/path/to/saved_model.pth', map_location=device))\n",
+    "model = model.to(device)\n",
+    "model.eval()\n",
+    "\n",
+    "# Load test IDs and perform TTA\n",
+    "test_ids_df = pd.read_csv('/kaggle/input/soil-classification/soil_classification-2025/test_ids.csv')\n",
+    "test_ids = test_ids_df['image_id'].tolist()\n",
+    "\n",
+    "preds = []\n",
+    "for img_id in test_ids:\n",
+    "    img_path = os.path.join('/kaggle/input/soil-classification/soil_classification-2025/test', img_id if '.' in img_id else img_id + '.jpg')\n",
+    "    image = Image.open(img_path).convert('RGB')\n",
+    "    tta_logits = []\n",
+    "    for aug in tta_transforms:\n",
+    "        augmented_img = aug(image).unsqueeze(0).to(device)\n",
+    "        tta_logits.append(model(augmented_img))\n",
+    "    mean_logits = torch.mean(torch.stack(tta_logits), dim=0)\n",
+    "    _, final_pred = torch.max(mean_logits, 1)\n",
+    "    preds.append(final_pred.item())\n",
+    "\n",
+    "predicted_labels = [CLASSES[i] for i in preds]\n",
+    "submission = pd.DataFrame({\n",
+    "    'image_id': test_ids,\n",
+    "    'soil_type': predicted_labels\n",
+    "})\n",
+    "submission.to_csv('/mnt/data/submission.csv', index=False)"
+   ]
+  }
+ ],
+ "metadata": {},
+ "nbformat": 4,
+ "nbformat_minor": 5
 }
