--- a/challenge-1/notebooks/training.ipynb
+++ b/challenge-1/notebooks/training.ipynb
@@ -1,38 +1,144 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "ecee567d",
+   "metadata": {},
+   "source": [
+    "# Training Script\n",
+    "\n",
+    "This notebook contains the training code."
+   ]
   },
-  "cells": [
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "nG2h-3cWah1W"
-      },
-      "outputs": [],
-      "source": [
-        "\"\"\"\n",
-        "\n",
-        "Author: Annam.ai IIT Ropar\n",
-        "Team Name: SoilClassifiers\n",
-        "Team Members: Member-1, Member-2, Member-3, Member-4, Member-5\n",
-        "Leaderboard Rank: <Your Rank>\n",
-        "\n",
-        "\"\"\"\n",
-        "\n",
-        "# This is the notebook used for training the model."
-      ]
-    }
-  ]
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e38dd98a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torchvision import transforms, models\n",
+    "from sklearn.metrics import f1_score, classification_report\n",
+    "import pandas as pd\n",
+    "from PIL import Image\n",
+    "import os\n",
+    "\n",
+    "# Device configuration\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"Using device: {device}\")\n",
+    "\n",
+    "# Constants\n",
+    "IMG_SIZE = 384\n",
+    "BATCH_SIZE = 32\n",
+    "NUM_EPOCHS = 10\n",
+    "LR = 1e-3\n",
+    "\n",
+    "# Soil classes (must match CSV labels exactly)\n",
+    "CLASSES = ['Alluvial soil', 'Black Soil', 'Clay soil', 'Red soil']\n",
+    "class_to_idx = {{c: i for i, c in enumerate(CLASSES)}}\n",
+    "\n",
+    "# Transformations\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize((IMG_SIZE, IMG_SIZE)),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], \n",
+    "                         std=[0.229, 0.224, 0.225])\n",
+    "])\n",
+    "\n",
+    "# Dataset\n",
+    "class SoilDataset(Dataset):\n",
+    "    def __init__(self, csv_file, root_dir, transform=None):\n",
+    "        self.annotations = pd.read_csv(csv_file)\n",
+    "        self.root_dir = root_dir\n",
+    "        self.transform = transform\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.annotations)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        image_id = str(self.annotations.iloc[idx, 0])\n",
+    "        if '.' not in image_id:\n",
+    "            image_id += '.jpg'\n",
+    "        else:\n",
+    "            base, ext = os.path.splitext(image_id)\n",
+    "            image_id = base + ext.lower()\n",
+    "\n",
+    "        img_path = os.path.join(self.root_dir, image_id)\n",
+    "        image = Image.open(img_path).convert('RGB')\n",
+    "\n",
+    "        if self.transform:\n",
+    "            image = self.transform(image)\n",
+    "\n",
+    "        label = self.annotations.iloc[idx, 1].strip()\n",
+    "        return image, class_to_idx[label]\n",
+    "\n",
+    "# Prepare DataLoader\n",
+    "train_dataset = SoilDataset(\n",
+    "    csv_file='/kaggle/input/soil-classification/soil_classification-2025/train_labels.csv',\n",
+    "    root_dir='/kaggle/input/soil-classification/soil_classification-2025/train',\n",
+    "    transform=transform\n",
+    ")\n",
+    "\n",
+    "train_size = int(0.8 * len(train_dataset))\n",
+    "val_size = len(train_dataset) - train_size\n",
+    "train_data, val_data = torch.utils.data.random_split(train_dataset, [train_size, val_size])\n",
+    "\n",
+    "train_loader = DataLoader(train_data, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "val_loader = DataLoader(val_data, batch_size=BATCH_SIZE)\n",
+    "\n",
+    "# Model setup\n",
+    "model = models.efficientnet_v2_s(weights='IMAGENET1K_V1')\n",
+    "model.classifier[1] = nn.Linear(1280, len(CLASSES))\n",
+    "model = model.to(device)\n",
+    "\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=LR)\n",
+    "scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, 'min', patience=2)\n",
+    "\n",
+    "# Training loop\n",
+    "for epoch in range(NUM_EPOCHS):\n",
+    "    model.train()\n",
+    "    running_loss = 0.0\n",
+    "    for inputs, labels in train_loader:\n",
+    "        inputs, labels = inputs.to(device), labels.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        running_loss += loss.item() * inputs.size(0)\n",
+    "\n",
+    "    model.eval()\n",
+    "    y_true, y_pred = [], []\n",
+    "    val_loss = 0.0\n",
+    "    with torch.no_grad():\n",
+    "        for inputs, labels in val_loader:\n",
+    "            inputs, labels = inputs.to(device), labels.to(device)\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "            val_loss += loss.item() * inputs.size(0)\n",
+    "            _, preds = torch.max(outputs, 1)\n",
+    "            y_true.extend(labels.cpu().numpy())\n",
+    "            y_pred.extend(preds.cpu().numpy())\n",
+    "\n",
+    "    val_f1 = f1_score(y_true, y_pred, average='weighted')\n",
+    "    print(f\"Epoch [{epoch+1}/{NUM_EPOCHS}], \"\n",
+    "          f\"Train Loss: {running_loss/len(train_loader.dataset):.4f}, \"\n",
+    "          f\"Val Loss: {val_loss/len(val_loader.dataset):.4f}, \"\n",
+    "          f\"Val F1: {val_f1:.4f}\")\n",
+    "\n",
+    "    scheduler.step(val_loss)\n",
+    "\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_true, y_pred, target_names=CLASSES))"
+   ]
+  }
+ ],
+ "metadata": {},
+ "nbformat": 4,
+ "nbformat_minor": 5
 }
