--- a/challenge-1/notebooks/inference.ipynb
+++ b/challenge-1/notebooks/inference.ipynb
@@ -13,6 +13,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ae7afe00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info =\"\"\"\n",
+    "\n",
+    "Author: Annam.ai IIT Ropar\n",
+    "Team Name: SoilClassifiers\n",
+    "Team Members: Caleb Chandrasekar, Sarvesh Chandran, Swaraj Bhattacharjee, Karan Singh, Saatvik Tyagi\n",
+    "Leaderboard Rank: 103\n",
+    "\n",
+    "\"\"\"ss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ac114dc2",
    "metadata": {},
    "outputs": [],
@@ -91,7 +108,11 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
