--- a/challenge-2/notebooks/training.ipynb
+++ b/challenge-2/notebooks/training.ipynb
@@ -1,38 +1,157 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "bb71f726",
+   "metadata": {},
+   "source": [
+    "# Autoencoder Training Notebook\n",
+    "\n",
+    "This notebook trains the autoencoder and computes the dynamic threshold."
+   ]
   },
-  "cells": [
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "nG2h-3cWah1W"
-      },
-      "outputs": [],
-      "source": [
-        "\"\"\"\n",
-        "\n",
-        "Author: Annam.ai IIT Ropar\n",
-        "Team Name: SoilClassifiers\n",
-        "Team Members: Member-1, Member-2, Member-3, Member-4, Member-5\n",
-        "Leaderboard Rank: <Your Rank>\n",
-        "\n",
-        "\"\"\"\n",
-        "\n",
-        "# This is the notebook used for training the model."
-      ]
-    }
-  ]
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffe82ee7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info =\"\"\"\n",
+    "\n",
+    "Author: Annam.ai IIT Ropar\n",
+    "Team Name: SoilClassifiers\n",
+    "Team Members: Caleb Chandrasekar, Sarvesh Chandran, Swaraj Bhattacharjee, Karan Singh, Saatvik Tyagi\n",
+    "Leaderboard Rank: 103\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6a98b6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# training.py\n",
+    "\n",
+    "import os\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torchvision import transforms\n",
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "# ✅ Environment\n",
+    "os.environ['CUDA_LAUNCH_BLOCKING'] = '1'\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# ✅ Configuration\n",
+    "IMG_SIZE   = 224\n",
+    "BATCH_SIZE = 32\n",
+    "EPOCHS     = 30\n",
+    "THRESHILE_PERCENTILE = 90  # percentile for dynamic threshold\n",
+    "\n",
+    "# ✅ Custom Dataset\n",
+    "class SoilDataset(Dataset):\n",
+    "    def __init__(self, folder, transform=None):\n",
+    "        self.folder      = folder\n",
+    "        self.image_files = [f for f in os.listdir(folder)\n",
+    "                            if f.lower().endswith(('.png','jpg','jpeg'))]\n",
+    "        self.transform   = transform\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.image_files)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        img_name = self.image_files[idx]\n",
+    "        img_path = os.path.join(self.folder, img_name)\n",
+    "        img      = Image.open(img_path).convert(\"RGB\")\n",
+    "        if self.transform:\n",
+    "            img = self.transform(img)\n",
+    "        return img, img_name\n",
+    "\n",
+    "# ✅ Transforms\n",
+    "train_transforms = transforms.Compose([\n",
+    "    transforms.Resize((IMG_SIZE, IMG_SIZE)),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize([0.485, 0.456, 0.406],\n",
+    "                         [0.229, 0.224, 0.225])\n",
+    "])\n",
+    "\n",
+    "# ✅ Autoencoder definition\n",
+    "class Autoencoder(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.encoder = nn.Sequential(\n",
+    "            nn.Conv2d(3,  32, 3, stride=2, padding=1), nn.ReLU(),\n",
+    "            nn.Conv2d(32, 64, 3, stride=2, padding=1), nn.ReLU(),\n",
+    "            nn.Conv2d(64,128, 3, stride=2, padding=1), nn.ReLU(),\n",
+    "        )\n",
+    "        self.decoder = nn.Sequential(\n",
+    "            nn.ConvTranspose2d(128, 64, 3, stride=2, padding=1, output_padding=1), nn.ReLU(),\n",
+    "            nn.ConvTranspose2d(64,  32, 3, stride=2, padding=1, output_padding=1), nn.ReLU(),\n",
+    "            nn.ConvTranspose2d(32,   3, 3, stride=2, padding=1, output_padding=1), nn.Sigmoid(),\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        z = self.encoder(x)\n",
+    "        return self.decoder(z)\n",
+    "\n",
+    "# ✅ Prepare data loader\n",
+    "train_ds = SoilDataset(\n",
+    "    \"/kaggle/input/soil-classification-part-2/soil_competition-2025/train\",\n",
+    "    transform=train_transforms\n",
+    ")\n",
+    "train_loader = DataLoader(train_ds, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "\n",
+    "# ✅ Model, loss & optimizer\n",
+    "model     = Autoencoder().to(device)\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
+    "\n",
+    "# ✅ Training loop\n",
+    "for epoch in range(1, EPOCHS+1):\n",
+    "    model.train()\n",
+    "    running_loss = 0.0\n",
+    "    for imgs, _ in tqdm(train_loader, desc=f\"Epoch {epoch}/{EPOCHS}\"):\n",
+    "        imgs = imgs.to(device)\n",
+    "        recon = model(imgs)\n",
+    "        loss  = criterion(recon, imgs)\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        running_loss += loss.item()\n",
+    "    avg_loss = running_loss / len(train_loader)\n",
+    "    print(f\"Epoch {epoch:2d}/{EPOCHS} — train loss: {avg_loss:.6f}\")\n",
+    "\n",
+    "# ✅ Compute dynamic threshold (90th percentile of train losses)\n",
+    "model.eval()\n",
+    "train_losses = []\n",
+    "with torch.no_grad():\n",
+    "    for imgs, _ in train_loader:\n",
+    "        imgs = imgs.to(device)\n",
+    "        recon = model(imgs)\n",
+    "        train_losses.append(criterion(recon, imgs).item())\n",
+    "\n",
+    "threshold = np.percentile(train_losses, THRESHILE_PERCENTILE)\n",
+    "print(f\"Dynamic threshold ({THRESHILE_PERCENTILE}th percentile): {threshold:.6f}\")\n",
+    "\n",
+    "# ✅ Save model & threshold\n",
+    "torch.save(model.state_dict(), \"autoencoder.pth\")\n",
+    "np.save(\"threshold.npy\", np.array(threshold))\n",
+    "print(\"✅ Saved: autoencoder.pth + threshold.npy\")\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
 }
