--- a/challenge-1/notebooks/training.ipynb
+++ b/challenge-1/notebooks/training.ipynb
@@ -13,6 +13,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "52bb49ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info =\"\"\"\n",
+    "\n",
+    "Author: Annam.ai IIT Ropar\n",
+    "Team Name: SoilClassifiers\n",
+    "Team Members: Caleb Chandrasekar, Sarvesh Chandran, Swaraj Bhattacharjee, Karan Singh, Saatvik Tyagi\n",
+    "Leaderboard Rank: 103\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e38dd98a",
    "metadata": {},
    "outputs": [],
@@ -138,7 +155,11 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
